# gRPC-example

./: .gitignore
clientex/: CMakeLists.txt  clientex.cpp  clientex.h  main.cpp
dtos/exserver/: exserviceapi.proto
dtos/servicesuiteex/: serviceex.proto
exserver/: CMakeLists.txt  main.cpp  server.cpp  server.h
exserver/exasyncserviceapi/: CMakeLists.txt  asyncrequestprocessor.cpp  asyncrequestprocessor.h
exserver/exserviceapi/: CMakeLists.txt  serviceendpoints.cpp  serviceendpoints.h  serviceimpl.cpp
servicesuiteex/serviceex/: CMakeLists.txt  main.cpp  serviceimpl.cpp  serviceimpl.h
